Minor placeholder updates

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Local environment variables TEMPLATE for healthcare-agent-demo-api
 DB_HOST=localhost
 DB_PORT=5434
-DB_NAME=local-huli
-DB_USER=huli
-DB_PASSWORD=huli
+DB_NAME=local-healthcare-agent-demo
+DB_USER=local-healthcare-agent-user
+DB_PASSWORD=local-healthcare-agent-password
