--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 DB_HOST=localhost
 DB_PORT=5434
-DB_NAME=test-huli
-DB_USER=huli
-DB_PASSWORD=huli
+DB_NAME=test-healthcare-agent-demo
+DB_USER=test-healthcare-agent-user
+DB_PASSWORD=test-healthcare-agent-password
+
