--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   postgres:
     image: postgres:17
-    container_name: local-huli
+    container_name: local-healthcare-agent-demo
     ports:
       - "5434:5432"
     environment:
-      POSTGRES_DB: local-huli
-      POSTGRES_USER: huli
-      POSTGRES_PASSWORD: huli
+      POSTGRES_DB: local-healthcare-agent-demo
+      POSTGRES_USER: local-healthcare-agent-user
+      POSTGRES_PASSWORD: local-healthcare-agent-password
     tmpfs:
       - /var/lib/postgresql/data
