ehr queries impl

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@ DB_PORT=5434
 DB_NAME=local-healthcare-agent-demo
 DB_USER=local-healthcare-agent-user
 DB_PASSWORD=local-healthcare-agent-password
+
+OPENAI_API_KEY=your-openai-api-key-here
