--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ DB_NAME=test-healthcare-agent-demo
 DB_USER=test-healthcare-agent-user
 DB_PASSWORD=test-healthcare-agent-password
 
+OPENAI_API_KEY=your-openai-api-key-here
